...
        <variable
            name="repoInfo"
            type="jp.co.yumemi.android.code_check.data.RepoInfo" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/result_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
...
